--- a/index.html
+++ b/index.html
@@ -1,1 +1,94 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Produktbestellung</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f0f8ff;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #ff4500;
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+        h1 {
+            font-size: 2.5em;
+            margin: 0;
+        }
+        main {
+            text-align: center;
+            padding: 20px;
+        }
+        .product {
+            display: inline-block;
+            background-color: white;
+            border: 2px solid #ccc;
+            border-radius: 10px;
+            padding: 15px;
+            margin: 20px;
+            width: 300px;
+            text-align: center;
+            box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+        }
+        .product img {
+            width: 100%;
+            border-radius: 10px;
+        }
+        .product-title {
+            font-size: 1.5em;
+            color: #333;
+            margin: 10px 0;
+        }
+        .product-price {
+            font-size: 1.2em;
+            color: #007b00;
+            margin-bottom: 10px;
+        }
+        .emoji {
+            font-size: 1.5em;
+        }
+        iframe {
+            width: 100%;
+            max-width: 640px;
+            height: 800px;
+            border: none;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px;
+        }
+    </style>
+</head>
+<body>
 
+    <header>
+        <h1>Willkommen im Shop <span class="emoji">🛍️</span></h1>
+        <p>Bestelle deine Lieblingsprodukte!</p>
+    </header>
+
+    <main>
+        <div class="product">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Takis_Blue_Heat.png/512px-Takis_Blue_Heat.png" alt="Takis Blue Heat">
+            <div class="product-title">Takis Blue Heat <span class="emoji">🌶️🔥</span></div>
+            <div class="product-price">Preis: 3,99 €</div>
+        </div>
+
+        <h2>Bestellformular <span class="emoji">📝</span></h2>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScdjewS4XRYeWuNhDSr7kZJ1WLSgi0JWvxcRyUwHS1-XDYUuw/viewform?embedded=true" 
+                frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>
+    </main>
+
+    <footer>
+        <p>© 2025 Dein Shop – Bestelle jetzt! <span class="emoji">🚀</span></p>
+    </footer>
+
+</body>
+</html>
